(Note: this file has been re-arranged to be in reverse chronological
order, which is The Right Thing for ChangeLogs - DLC)

April 20, 2021 (fortune-mod 3.6.0)

	Some lib-recode handling fixes.

	rinutils_bootstrap.

	Move some stuff to off.
	( https://github.com/shlomif/fortune-mod/pull/51 ; thanks to
	@tristanbatchler )

	Fix typos.
	( https://github.com/shlomif/fortune-mod/pull/49 ; thanks to
	@cchristiansen )

	Add quotes.

November 9, 2020 (fortune-mod 3.4.1)

	Some lib-recode handling fixes:
	( https://github.com/shlomif/fortune-mod/pull/46 ; thanks to @heirecka )

	Add a quotation.

November 8, 2020 (fortune-mod 3.4.0)

	Made the compile-time dependency on lib-recode optional ;
	handle the missing librinutils better.
	( https://github.com/shlomif/fortune-mod/issues/44 )

	Add some quotes (Thanks in part to @RashadSaleh :
	https://github.com/shlomif/fortune-mod/pull/43 )

September 24, 2020 (fortune-mod 3.2.0)

	Include rinutils in the source tarball / git checkout.
	( https://github.com/shlomif/fortune-mod/issues/44 )

September 16, 2020 (fortune-mod 3.0.0)

	Convert the documentation from troff to DocBook 5/XML using
	doclifter ( http://www.catb.org/~esr/doclifter/ ). The resultant troff
	man pages are included in the source release tarball.

	Fix formatting of several cookies.

	Minor build fixes (avoid rebuilding the symlinks).

	Fix the build and tests on AppVeyor-CI / Windows

	Fix some compiler warnings and modernise the code a little.

	Add some new fortune cookies.

	New major version digit just in time for Rosh Hashana
	and Talk like a Pirate day. Happy new yea..arrrrrrrrr!

August 30, 2020 (fortune-mod 2.29.1)

	DEVELOPMENT RELEASE

	Fix the build and tests on AppVeyor-CI / Windows

	Fix some compiler warnings.

August 20, 2020 (fortune-mod 2.29.0)

	DEVELOPMENT RELEASE

	Convert the documentation from troff to DocBook 5/XML using
	doclifter ( http://www.catb.org/~esr/doclifter/ ). The resultant troff